--- a/week2/day2/Exercise_XP/excXP2-7/exercise7.html
+++ b/week2/day2/Exercise_XP/excXP2-7/exercise7.html
@@ -8,7 +8,7 @@
 <body>
   <section class="listBooks"></section>
 
-  <script src="script.js"></script>
+  <script src="script7.js"></script>
 </body>
 
 </html>
